--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="desciption" content="resume for Ryan Dionne"/>
+    <meta property="og:title" content="Ryan's Resume" />
+    <meta property="og:type" content="resume" />
+    <meta property="og:url" content="http://https://www.ryandionneresume.herokuapp.com" />
+    <meta property="og:image:type" content="/assets/2018-11-28 (2).png"/>
+    <meta property="og:description" content="resume for ryan dionne" />
 
     <title>Ryan's Resume</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
