--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Ryan's Resume" />
     <meta property="og:type" content="resume" />
     <meta property="og:url" content="http://https://www.ryandionneresume.herokuapp.com" />
-    <meta property="og:image:type" content="assets/img/2018-11-28 (2).png"/>
+    <meta property="og:image:type" content="assets/img/image"/>
     <meta property="og:description" content="resume for ryan dionne" />
 
     <title>Ryan's Resume</title>
