--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="desciption" content="resume for Ryan Dionne"/>
     <meta property="og:title" content="Ryan's Resume" />
     <meta property="og:type" content="resume" />
-    <meta property="og:url" content="http://https://www.ryandionneresume.herokuapp.com" />
+    <meta property="og:url" content="https://www.ryandionneresume.herokuapp.com" />
     <meta property="og:image:type" content="assets/img/image"/>
     <meta property="og:description" content="resume for ryan dionne" />
 
