--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Ryan's Resume" />
     <meta property="og:type" content="resume" />
     <meta property="og:url" content="https://www.ryandionneresume.herokuapp.com" />
-   <meta property='og:image' content="/assets/img/image.png"/>
+    <meta property="og:image" content="/assets/img/image.png"/>
     <meta property="og:description" content="resume for ryan dionne" />
 
     <title>Ryan's Resume</title>
