--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="desciption" content="resume for Ryan Dionne"/>
-
-
-    <meta property='og:title' content="Title of the article"/>
-    <meta property='og:image' content="//assets/img/image.png"/>
-    <meta property='og:description' content="resume"/>
     
+    <meta property="og:title" content="Ryan's Resume" />
+    <meta property="og:type" content="resume" />
+    <meta property="og:url" content="https://www.ryandionneresume.herokuapp.com" />
+    <meta property="og:image:type" content="assets/img/image"/>
+    <meta property="og:description" content="resume for ryan dionne" />
 
     <title>Ryan's Resume</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
